--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ greenlet==3.0.3
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+packaging==24.1
+plotly==5.23.0
 SQLAlchemy==2.0.32
+tenacity==9.0.0
 typing_extensions==4.12.2
 Werkzeug==3.0.3
