--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "chart.js": "^4.4.3",
     "vue": "^3.4.29",
     "vue-chartjs": "^5.3.1",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vuetify": "^3.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
